tests/functional2/lang/parser-token-whitespace/(0.)-depr.err.exp
error: syntax error, expecting ')'
       at «string»:1:12:
            1| with {}; (0.)
             |            ^
